--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <title>News Website</title>
 </head>
 
-<body class="m-0 p-0">
+<body class="m-10rem p-2rem">
 
-    <div class="container-fluid m-0 p-0">
+    <div class="container-fluid m-10rem p-2rem">
 
         <!-- navbar -->
         <div>
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <div class="container-fluid">
-                    <a class="navbar-brand text-warning" href="#">News34</a>
+                    <a class="navbar-brand text-warning" href="#">Hackathon</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -61,9 +61,6 @@
         <div class="mt-5">
             <div>
                 <nav class="navbar navbar-expand-lg navbar-dark bg-dark mt-4">
-                  <div class="container-fluid m-0 p-0">
-                    <h5 class="text-white me-auto ms-auto">Code<span class="text-warning">Logic</span></h5>
-                  </div>
                 </nav>
               </div>
         </div>
